--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "pinia": "^2.0.13",
+    "sass": "^1.50.1",
     "vue": "^3.0.0",
+    "vue-click-outside": "^1.1.0",
+    "vue-i18n": "9",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
