--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-click-outside": "^1.1.0",
     "vue-i18n": "9",
     "vue-router": "^4.0.0-0",
+    "vue3-datepicker": "^0.3.4",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
