--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
+    "jwt-decode": "^3.1.2",
     "pinia": "^2.0.13",
     "sass": "^1.50.1",
+    "sweetalert2": "^11.4.17",
     "vue": "^3.0.0",
+    "vue-chart-3": "^3.1.8",
     "vue-click-outside": "^1.1.0",
     "vue-i18n": "9",
     "vue-router": "^4.0.0-0",
