--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.3",
     "pinia": "^2.0.13",
     "sass": "^1.50.1",
     "sweetalert2": "^11.4.17",
@@ -18,7 +19,6 @@
     "vue-click-outside": "^1.1.0",
     "vue-i18n": "9",
     "vue-router": "^4.0.0-0",
-    "vue3-datepicker": "^0.3.4",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
