--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^3.8.0",
     "moment": "^2.29.3",
     "pinia": "^2.0.13",
+    "print-js": "^1.6.0",
     "sass": "^1.50.1",
     "sweetalert2": "^11.4.17",
     "vue": "^3.0.0",
