--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "3.1.1",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "moment": "^2.29.3",
